[Vibe Warning] Fix the scaling to not stretch pages Idk how this PDF.js impl works (or maybe it's just the older version of PDF.js... not updating for now) Working on scaling using examples from the documentation for hiDPI has just caused the pages to stretch (albeit in better quality)
Confused, so I've vibe coded some changes for the scaling, I just need this to work (thanks Claude)

--- a/web/magazine.css
+++ b/web/magazine.css
@@ -27,6 +27,24 @@
 }
 
 #magazine .page {
+  background-color: white;
+  overflow: hidden;
+}
+
+#magazine .page canvas {
+  width: 100%;
+  height: 100%;
+  object-fit: contain; /* This is key for maintaining aspect ratio */
+}
+
+#magazineContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+#magazine .page {
   background-color: #fff;
 }
 
